# patchpilot-agentic-ai

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
benchmark_seeds/: projects.json
challenge_benchmarks/: manual_challenges.json
demo/: README.md  requirements-demo.txt  streamlit_app.py
docs/: accepted_scope.md  evaluation_comparison.md  evaluation_results.md  quixbugs_smoke_results.md  roadmap.md  statistical_analysis.md
generated_benchmarks/: mutmut_research_suite.json  research_suite.json
results/: benchmark_suite_summary.csv  evaluation_summary.csv  final_evaluation_summary.csv  mutmut_paired_outcomes.csv  mutmut_status_breakdown.csv
scripts/: analyze_final_evaluation.py  create_manual_challenges.py  create_patchpilot_benchmarks.py  generate_mutmut_benchmark.py  generate_mutmut_research_suite.py  generate_report_assets.py  generate_statistics_report.py  reproduce_final_analysis.py  reproduce_final_analysis.sh  run_demo_task.py  run_evaluation.py  run_live_qwen.py  run_quixbugs_smoke.py  summarize_mutmut_ablation.py  summarize_research_evaluation.py  validate_mutmut_research_suite.py  validate_research_benchmarks.py
tests/: test_agent_executor.py  test_benchmark_catalog.py  test_benchmark_manifest.py  test_benchmark_runner.py  test_benchmark_workspace.py  test_control_loop.py  test_evaluation_catalog.py  test_evaluation_conditions.py  test_evaluation_metrics.py  test_evaluation_statistics.py  test_final_agent_runtime_fix.py  test_hidden_verification.py  test_hidden_verification_src_layout.py  (+26 more)
(+421 files in other folders)
