[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchpilot-agentic-ai"
version = "0.1.0"
description = "A bounded agent for autonomous Python debugging and repair"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "rich>=13.7,<15",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "mutmut==3.6.0",
]

analysis = [
    "matplotlib>=3.9,<4",
    "numpy>=2,<3",
    "pandas>=2.2,<3",
    "scipy>=1.13,<2",
]

[project.scripts]
patchpilot = "patchpilot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
extend-exclude = ["artifacts", "generated_benchmarks", "challenge_benchmarks"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["patchpilot"]
